# flask-cpc

./: Dockerfile  README.md  config.py  pyproject.toml  requirements.txt  run.py
myapp/: __init__.py  forms.py  routes.py
myapp/static/: style.css
myapp/templates/: about.html  base.html  contact.html  page_count.html  upload_pdf.html
